--- a/Elevator/Menu.storyboard
+++ b/Elevator/Menu.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1808" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -34,7 +34,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="菜单" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fic-yk-Ie1">
-                                        <rect key="frame" x="147" y="8" width="100" height="25"/>
+                                        <rect key="frame" x="0.0" y="10" width="400" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="Sss-sG-egR"/>
                                             <constraint firstAttribute="width" constant="100" id="roV-kF-m1G"/>
@@ -45,6 +45,8 @@
                                         <nil key="highlightedColor"/>
                                         <variation key="default">
                                             <mask key="constraints">
+                                                <exclude reference="Sss-sG-egR"/>
+                                                <exclude reference="roV-kF-m1G"/>
                                                 <exclude reference="tcX-V0-mLA"/>
                                             </mask>
                                         </variation>
@@ -60,12 +62,14 @@
                                     <constraint firstItem="vS8-oH-Lbd" firstAttribute="leading" secondItem="DPM-MD-9OY" secondAttribute="leading" constant="10" id="F4p-Zd-pcX"/>
                                     <constraint firstItem="vS8-oH-Lbd" firstAttribute="centerY" secondItem="DPM-MD-9OY" secondAttribute="centerY" id="H8E-sa-aGa"/>
                                     <constraint firstItem="Fic-yk-Ie1" firstAttribute="leading" secondItem="vS8-oH-Lbd" secondAttribute="trailing" constant="78" id="Kvh-rb-e0y"/>
+                                    <constraint firstAttribute="trailing" secondItem="Fic-yk-Ie1" secondAttribute="trailing" id="PZY-XV-vEZ"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="VKk-vF-397"/>
                                     <constraint firstAttribute="height" constant="53" id="Y0x-cC-VxT">
                                         <variation key="widthClass=compact" constant="40"/>
                                     </constraint>
                                     <constraint firstAttribute="height" constant="40" id="baG-PQ-HP5"/>
                                     <constraint firstItem="Fic-yk-Ie1" firstAttribute="centerY" secondItem="DPM-MD-9OY" secondAttribute="centerY" id="hR4-mo-C4N"/>
+                                    <constraint firstItem="Fic-yk-Ie1" firstAttribute="leading" secondItem="DPM-MD-9OY" secondAttribute="leading" id="jDq-Bk-75K"/>
                                     <constraint firstItem="Fic-yk-Ie1" firstAttribute="top" secondItem="DPM-MD-9OY" secondAttribute="top" constant="9" id="myW-la-30J"/>
                                     <constraint firstItem="Fic-yk-Ie1" firstAttribute="centerY" secondItem="vS8-oH-Lbd" secondAttribute="centerY" id="nYP-8Z-Kba"/>
                                 </constraints>
@@ -75,6 +79,7 @@
                                         <exclude reference="BlC-DE-F9R"/>
                                         <exclude reference="VKk-vF-397"/>
                                         <exclude reference="Y0x-cC-VxT"/>
+                                        <exclude reference="7s1-zQ-pzd"/>
                                         <exclude reference="D6c-dw-2dp"/>
                                         <exclude reference="Kvh-rb-e0y"/>
                                         <exclude reference="myW-la-30J"/>
@@ -99,7 +104,7 @@
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="0.18823529410000001" green="0.2156862745" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="xdf-sj-7xm" firstAttribute="top" secondItem="DPM-MD-9OY" secondAttribute="bottom" id="Q2c-z4-rOa"/>
                             <constraint firstItem="xdf-sj-7xm" firstAttribute="bottom" secondItem="ItY-g9-nJA" secondAttribute="top" id="ZDo-KS-huz"/>
