--- a/Elevator/Record.storyboard
+++ b/Elevator/Record.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1808" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -215,11 +215,12 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZAx-sO-ITo">
                                 <rect key="frame" x="0.0" y="60" width="400" height="500"/>
-                                <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="455" id="OYW-cE-42p"/>
                                 </constraints>
-                                <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <variation key="default">
                                     <mask key="constraints">
                                         <exclude reference="OYW-cE-42p"/>
@@ -245,27 +246,6 @@
                                     </mask>
                                 </variation>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BmW-Lh-Ah9">
-                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="446" id="U6T-XC-xR7"/>
-                                    <constraint firstAttribute="height" constant="446" id="r9o-10-pUI"/>
-                                </constraints>
-                                <color key="separatorColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="r9o-10-pUI"/>
-                                        <exclude reference="U6T-XC-xR7"/>
-                                    </mask>
-                                </variation>
-                                <variation key="widthClass=compact">
-                                    <mask key="constraints">
-                                        <exclude reference="r9o-10-pUI"/>
-                                        <exclude reference="U6T-XC-xR7"/>
-                                    </mask>
-                                </variation>
-                            </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CwK-vY-sdQ">
                                 <rect key="frame" x="0.0" y="20" width="400" height="40"/>
                                 <color key="backgroundColor" red="0.08235294118" green="0.18823529410000001" blue="0.42352941179999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -307,61 +287,40 @@
                                 </variation>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="CwK-vY-sdQ" firstAttribute="leading" secondItem="LFw-sp-rrz" secondAttribute="leading" id="27x-1q-dlU"/>
                             <constraint firstAttribute="trailing" secondItem="CwK-vY-sdQ" secondAttribute="trailing" id="4or-Od-DWH"/>
                             <constraint firstItem="CwK-vY-sdQ" firstAttribute="top" secondItem="yKt-rB-uqs" secondAttribute="bottom" id="6fl-hv-1In"/>
-                            <constraint firstItem="Abf-Sr-Xxa" firstAttribute="top" secondItem="BmW-Lh-Ah9" secondAttribute="bottom" constant="2" id="AIe-Nr-4su">
-                                <variation key="widthClass=compact" constant="0.0"/>
-                            </constraint>
-                            <constraint firstItem="BmW-Lh-Ah9" firstAttribute="leading" secondItem="Abf-Sr-Xxa" secondAttribute="leading" id="AdA-zI-ZI5"/>
                             <constraint firstItem="Abf-Sr-Xxa" firstAttribute="trailing" secondItem="CwK-vY-sdQ" secondAttribute="trailing" id="JOq-ML-fn7"/>
                             <constraint firstItem="ZAx-sO-ITo" firstAttribute="trailing" secondItem="CwK-vY-sdQ" secondAttribute="trailing" id="Lto-ID-Zk7"/>
                             <constraint firstItem="ZAx-sO-ITo" firstAttribute="leading" secondItem="CwK-vY-sdQ" secondAttribute="leading" id="NGn-ka-U0M"/>
-                            <constraint firstItem="BmW-Lh-Ah9" firstAttribute="top" secondItem="CwK-vY-sdQ" secondAttribute="bottom" constant="8" symbolic="YES" id="Ni0-4a-3aS"/>
                             <constraint firstItem="ZkP-qj-5bJ" firstAttribute="top" secondItem="ZAx-sO-ITo" secondAttribute="bottom" id="PcI-3S-Mkc"/>
                             <constraint firstItem="ZAx-sO-ITo" firstAttribute="top" secondItem="CwK-vY-sdQ" secondAttribute="bottom" id="TMx-YK-LSA"/>
                             <constraint firstItem="ZkP-qj-5bJ" firstAttribute="trailing" secondItem="CwK-vY-sdQ" secondAttribute="trailing" id="VdE-8Y-bol"/>
-                            <constraint firstItem="BmW-Lh-Ah9" firstAttribute="trailing" secondItem="Abf-Sr-Xxa" secondAttribute="trailing" id="bCP-6i-ErK"/>
                             <constraint firstItem="Abf-Sr-Xxa" firstAttribute="leading" secondItem="CwK-vY-sdQ" secondAttribute="leading" id="fA6-Mx-zd2"/>
                             <constraint firstItem="ZkP-qj-5bJ" firstAttribute="leading" secondItem="CwK-vY-sdQ" secondAttribute="leading" id="k1C-7t-uLw"/>
-                            <constraint firstItem="BmW-Lh-Ah9" firstAttribute="top" secondItem="CwK-vY-sdQ" secondAttribute="bottom" constant="8" id="p2f-NQ-iDS">
-                                <variation key="widthClass=compact" constant="0.0"/>
-                            </constraint>
                             <constraint firstItem="ZkP-qj-5bJ" firstAttribute="bottom" secondItem="OqS-ji-maj" secondAttribute="top" id="rK6-Vx-nsP"/>
                             <constraint firstItem="Abf-Sr-Xxa" firstAttribute="bottom" secondItem="OqS-ji-maj" secondAttribute="top" id="t73-tf-JWc"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="Abf-Sr-Xxa"/>
-                                <exclude reference="BmW-Lh-Ah9"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="AdA-zI-ZI5"/>
-                                <exclude reference="p2f-NQ-iDS"/>
-                                <exclude reference="Ni0-4a-3aS"/>
-                                <exclude reference="bCP-6i-ErK"/>
                                 <exclude reference="JOq-ML-fn7"/>
-                                <exclude reference="t73-tf-JWc"/>
-                                <exclude reference="AIe-Nr-4su"/>
                                 <exclude reference="fA6-Mx-zd2"/>
+                                <exclude reference="t73-tf-JWc"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
                                 <include reference="Abf-Sr-Xxa"/>
-                                <include reference="BmW-Lh-Ah9"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="AdA-zI-ZI5"/>
-                                <include reference="p2f-NQ-iDS"/>
-                                <exclude reference="Ni0-4a-3aS"/>
-                                <include reference="bCP-6i-ErK"/>
                                 <include reference="JOq-ML-fn7"/>
-                                <include reference="t73-tf-JWc"/>
-                                <include reference="AIe-Nr-4su"/>
                                 <include reference="fA6-Mx-zd2"/>
+                                <include reference="t73-tf-JWc"/>
                             </mask>
                         </variation>
                     </view>
